<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondoxbox"
    android:orientation="vertical"
    tools:context=".activity_Login">

    <ImageView
        android:id="@+id/imglogoLogin"
        android:layout_width="277dp"
        android:layout_height="98dp"
        android:layout_marginEnd="64dp"
        android:background="@drawable/pass"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />

    <ImageView
        android:id="@+id/xboxhd"
        android:layout_width="400dp"
        android:layout_height="305dp"
        android:layout_marginEnd="4dp"
        android:background="@drawable/xboxhd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/tvEtiqLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strEtiqLogo"
        android:textColor="@color/white"
        android:textSize="@dimen/tamtexto2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imglogoLogin" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editUserName"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margen6"
        android:layout_marginLeft="@dimen/margen3"
        android:layout_marginTop="@dimen/margen3"
        android:layout_marginRight="@dimen/margen3"
        android:background="@color/barraxbox"
        android:drawableLeft="@drawable/usuarios16"
        android:drawablePadding="@dimen/margen5"
        android:hint="@string/hint_UserName"
        android:paddingLeft="@dimen/margen1"
        android:textColor="@color/teal_200"
        android:textColorHint="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEtiqLogo" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editPassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margen6"
        android:layout_marginLeft="@dimen/margen3"
        android:layout_marginTop="@dimen/margen1"
        android:layout_marginRight="@dimen/margen3"
        android:background="@color/barraxbox"
        android:drawableLeft="@drawable/cerrar"
        android:drawablePadding="@dimen/margen5"
        android:hint="@string/hint_Password"
        android:inputType="textPassword"
        android:paddingLeft="@dimen/margen1"
        android:textColor="@color/teal_200"
        android:textColorHint="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editUserName" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margen3"
        android:layout_marginTop="@dimen/margen6"
        android:layout_marginRight="@dimen/margen3"
        android:backgroundTint="@color/verdexbox"
        android:hint="@string/strLogin"
        android:textColor="@color/teal_700"
        android:textColorHint="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPassword" />

    <TextView
        android:id="@+id/tvNotienecuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margen2"
        android:text="@string/strNoTieneCuenta"
        android:textColor="@color/white"
        app:layout_constraintHorizontal_bias="0.35"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

    <TextView
        android:id="@+id/tvCreaUnaAqui"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margen2"
        android:text="@string/strCreaUna"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintLeft_toRightOf="@id/tvNotienecuenta"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnLogin" />


</androidx.constraintlayout.widget.ConstraintLayout>
