<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activity_crearcuenta">

    <ImageView
        android:id="@+id/equipo"
        android:layout_width="440dp"
        android:layout_height="290dp"
        android:layout_marginEnd="4dp"
        android:background="@drawable/jugador"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.092" />

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/tam2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tbCrearCuenta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/fondoxbox">

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/tvEmailCuenta"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margen6"
        android:layout_marginLeft="@dimen/margen4"
        android:layout_marginRight="@dimen/margen4"
        android:background="@color/barraxbox"
        android:hint="@string/stremail"
        android:paddingLeft="@dimen/margen1"
        android:textColor="@color/teal_200"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.36" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/tvPasswordCuenta"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margen6"
        android:layout_marginLeft="@dimen/margen4"
        android:layout_marginTop="@dimen/margen1"
        android:layout_marginRight="@dimen/margen4"
        android:background="@color/barraxbox"
        android:hint="@string/hint_Password"
        android:paddingLeft="@dimen/margen1"
        android:textColor="@color/teal_200"
        android:textColorHint="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEmailCuenta" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/tvConfPassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margen6"
        android:layout_marginLeft="@dimen/margen4"
        android:layout_marginTop="@dimen/margen1"
        android:layout_marginRight="@dimen/margen4"
        android:background="@color/barraxbox"
        android:hint="@string/strConfirmarPassword"
        android:paddingLeft="@dimen/margen1"
        android:textColor="@color/teal_200"
        android:textColorHint="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPasswordCuenta" />

    <Button
        android:id="@+id/btnCrearCuenta"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margen6"
        android:hint="@string/strCreaUna"
        android:textColor="@color/teal_200"
        android:textColorHint="@color/white"
        android:backgroundTint="@color/verdexbox"
        android:layout_marginLeft="@dimen/margen3"
        android:layout_marginRight="@dimen/margen3"
        android:layout_marginTop="@dimen/margen6"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvConfPassword">

    </Button>
    <ImageView
        android:id="@+id/controlxboxhd"
        android:layout_width="413dp"
        android:layout_height="400dp"
        android:layout_marginEnd="4dp"
        android:background="@drawable/controlxboxhd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.07" />


</androidx.constraintlayout.widget.ConstraintLayout>

